# rag-sistem

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  docker-compose.production.yml  docker-compose.yml  form.md  piano.md
.cursor/rules/: agent-doc.mdc  dag-pipeline.mdc  example-chat-bot-doc.mdc  functional-pipeline.mdc  ingestion-pipeline-doc.mdc  multy-mod-doc.mdc  rag-doc.mdc  start-doc.mdc  streaming-doc.mdc  structured-response.mdc  tools.mdc  tracing-doc.mdc
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_change_status_to_varchar.py  0003_fix_alembic_version_column.py  0004_add_form_documents_and_form_fields.py
backend/app/: main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: documents.py  health.py  search.py
backend/app/core/: celery_app.py  config.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  document.py
backend/app/rag/: __init__.py  components.py  document_ai_parser.py  pipelines.py  table_processor.py  vectorstore.py
backend/app/schemas/: document.py  search.py
backend/app/services/: documents.py  form_agents.py  form_documents.py  rag.py
backend/app/tasks/: __init__.py  documents.py
docs/: HOSTING.md  INTEGRATION.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/components/: app-sidebar.tsx  theme-toggle.tsx
scripts/: check_infrastructure.sh  dev.sh  setup_ollama.sh
(+8 files in other folders)
