[project]
name = "medit-rag-backend"
version = "0.1.0"
description = "Backend FastAPI per il gestionale RAG."
authors = [{ name = "Medit Team" }]
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<0.112",
    "uvicorn[standard]>=0.30,<0.31",
    "pydantic-settings>=2.2,<2.3",
    "sqlalchemy>=2.0,<2.1",
    "psycopg2-binary>=2.9,<2.10",
    "alembic>=1.13,<1.14",
    "python-multipart>=0.0.9,<0.0.10",
    "redis>=5.0,<5.1",
    "qdrant-client>=1.9,<2.0",
    "celery>=5.4,<5.5",
    "datapizza-ai==0.0.7",
    "datapizza-ai-parsers-docling>=0.0.6,<0.1",
    "python-docx>=1.1,<1.2",
    "openpyxl>=3.1,<3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<8.3",
    "httpx>=0.27,<0.28",
    "ruff>=0.4,<0.5",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000
reload = true
